--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-#store_name .row {
+#store_name {
   border-bottom-color: black;
   border-bottom-width: 3px;
 }
@@ -12,13 +12,12 @@
 
 .heading {
   position: relative;
-  max-width: 1000px; /* Maximum width */
-  margin: 0 auto; /* Center it */
+  max-width: 800px; /* Maximum width */
 }
 
 .heading .content {
   position: absolute; /* Position the background text */
-  bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+  bottom: 40px; /* At the bottom. Use top:0 to append it to the top */
   background: rgb(0, 0, 0); /* Fallback color */
   background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1; /* Grey text */
@@ -26,33 +25,22 @@
   padding: 20px; /* Some padding */
 }
 
-#search {
-  width: 30%;
-}
-
-/* Full-width input fields */
-
-input[type="text"],
-input[type="text"] {
-  width: 100%;
+#search input[type="text"] {
+  width: 40%;
   padding: 15px;
-  margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
 }
 
-/* Add a background color when the inputs get focus */
-
-input[type="text"]:focus,
-input[type="text"]:focus {
+#search input[type="text"]:focus {
   background-color: #ddd;
   outline: none;
 }
 
 /* Set a style for all buttons */
 
-#signup {
+/* #signup {
   background-color: #4caf50;
   color: white;
   padding: 14px 20px;
@@ -61,39 +49,39 @@ input[type="text"]:focus {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
-}
+} */
 
-#signup:hover {
+/* #signup:hover {
   opacity: 1;
-}
+} */
 
 /* Extra styles for the cancel button */
-
+/* 
 .cancelbtn {
   padding: 10px 10px;
   background-color: #f44336;
-}
+} */
 
 /* Float cancel and signup buttons and add an equal width */
-
+/* 
 .cancelbtn,
 .signupbtn {
   float: left;
   width: 50%;
-}
+} */
 
 /* Add padding to container elements */
 
-.container {
+/* .container {
   padding: 16px;
-}
+} */
 
 /* The Modal (background) */
 
 #id01 {
   display: none;
   /* Hidden by default */
-  position: fixed;
+
   /* Stay in place */
   z-index: 1;
   /* Sit on top */
@@ -111,7 +99,7 @@ input[type="text"]:focus {
 
 /* Modal Content/Box */
 
-#signing {
+#modal {
   background-color: #fefefe;
   margin: 5% auto 15% auto;
   /* 5% from the top, 15% from the bottom and centered */
@@ -122,10 +110,10 @@ input[type="text"]:focus {
 
 /* Style the horizontal ruler */
 
-hr {
+/* hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
-}
+} */
 
 /* The Close Button (x) */
 
@@ -146,11 +134,11 @@ hr {
 
 /* Clear floats */
 
-.clearfix::after {
+/* .clearfix::after {
   content: "";
   clear: both;
   display: table;
-}
+} */
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 
