--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@
 
 /* Set a style for all buttons */
 
-/* #signup {
+#signup {
   background-color: #4caf50;
   color: white;
   padding: 14px 20px;
@@ -49,32 +49,18 @@
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
-} */
+}
 
-/* #signup:hover {
+#signup:hover {
   opacity: 1;
-} */
+}
 
 /* Extra styles for the cancel button */
-/* 
+
 .cancelbtn {
   padding: 10px 10px;
   background-color: #f44336;
-} */
-
-/* Float cancel and signup buttons and add an equal width */
-/* 
-.cancelbtn,
-.signupbtn {
-  float: left;
-  width: 50%;
-} */
-
-/* Add padding to container elements */
-
-/* .container {
-  padding: 16px;
-} */
+}
 
 /* The Modal (background) */
 
@@ -108,13 +94,6 @@
   /* Could be more or less, depending on screen size */
 }
 
-/* Style the horizontal ruler */
-
-/* hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-} */
-
 /* The Close Button (x) */
 
 .close {
@@ -134,11 +113,11 @@
 
 /* Clear floats */
 
-/* .clearfix::after {
+.clearfix::after {
   content: "";
   clear: both;
   display: table;
-} */
+}
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 
