--- a/styles/main.css
+++ b/styles/main.css
@@ -1,32 +1,21 @@
-#store_name {
+/* .border-bottom {
   border-bottom-color: black;
-  border-bottom-width: 3px;
+  border-bottom: 20px;
 }
 
-.header-logo {
-  border-bottom: black;
+.logo {
+  border: black;
 }
-.header-logo > a {
-  color: black;
-}
+.logo > a {
+  border: black;
+} */
 
-.heading {
+#collage {
   position: relative;
-  max-width: 800px; /* Maximum width */
+  max-width: 600px; /* Maximum width */
 }
-
-.heading .content {
-  position: absolute; /* Position the background text */
-  bottom: 40px; /* At the bottom. Use top:0 to append it to the top */
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-  color: #f1f1f1; /* Grey text */
-  width: 100%; /* Full width */
-  padding: 20px; /* Some padding */
-}
-
 #search input[type="text"] {
-  width: 40%;
+  width: 100%;
   padding: 15px;
   display: inline-block;
   border: none;
