--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,11 @@
-/* .border-bottom {
-  border-bottom-color: black;
-  border-bottom: 20px;
-}
-
-.logo {
-  border: black;
-}
-.logo > a {
-  border: black;
-} */
-
+/* header collage */
 #collage {
   position: relative;
   max-width: 800px; /* Maximum width */
   margin: 5rem;
   padding: 5rem;
 }
+/* search bar */
 #search input[type="text"] {
   width: 100%;
   padding: 15px;
@@ -29,70 +19,6 @@
   outline: none;
 }
 
-/* Extra styles for the cancel button */
-
-.cancelbtn {
-  padding: 10px 10px;
-  background-color: #f44336;
-}
-
-/* The Modal (background) */
-
-#id01 {
-  display: none;
-  /* Hidden by default */
-
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: #474e5d;
-  padding-top: 50px;
-}
-
-/* Modal Content/Box */
-
-#modal {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto;
-  /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button (x) */
-
-.close {
-  position: absolute;
-  right: 35px;
-  top: 15px;
-  font-size: 40px;
-  font-weight: bold;
-  color: #f1f1f1;
-}
-
-.close:hover,
-.close:focus {
-  color: #f44336;
-  cursor: pointer;
-}
-
-/* Clear floats */
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 
 .flip-card {
@@ -104,7 +30,6 @@
   height: 400px;
   border: 1px solid #f1f1f1;
   perspective: 1000px;
-  /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
@@ -147,4 +72,11 @@
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+}
+
+.modal.and.carousel {
+  position: fixed;
+}
+.item img {
+  width: 100%;
 }
